<resources>
    <string name="app_name">BoardGamerApp</string>
    <string name="spielerwahl">Spieler auswählen</string>
    <string name="auswahl">Ausgewählt: %1$s</string> <!-- Platzhalter -->
    <string name="terminwahl">Anstehende Termine</string>
    <string name="terminvergangen">Letzter Termin</string>
    <string name="title_activity_vor_termin_detail">VorTerminDetailActivity</string>
    <string name="gastgeber">Gastgeber: %1$s</string>
    <string name="teilnahme">Ich bin dabei!</string>
    <string name="spielvorschläge">Welches Spiel darf`s sein?</string>
    <string name="vorschlag">dein Spielvorschlag</string>
    <string name="platzhalterMitKlammern">%1$s (%2$d)</string>
    <string name="teilnehmer">Teilnehmer:</string>
    <string name="spiel">Gewinner der Spielabstimmung</string>
    <string name="keinspiel">Es konnte kein Gewinnerspiel ermittelt werden.</string>
    <string name="bewert">Bewertungen</string>
    <string name="erlbewert">Bitte beachte, dass du nur einmalig eine Bewertung abgeben kannst und diese nach dem Senden unveränderlich ist.</string>
    <string name="gbewert">Gastgeberbewertung</string>
    <string name="ebewert">Verpflegungsbewertung</string>
    <string name="abewert">Allgemeine Bewertung</string>
    <string name="kommentar">Kommentar (optional)</string>
    <string name="bsenden">Bewertung absenden</string>
    <string name="btoast">Bewertung wurde abgesendet!</string>
    <string name="keinTermin">Wie es scheint, hast du noch keinen Termin ausgerichtet. :(</string>
    <string name="keineTeilnehmer">Leider hat an diesem Termin keiner teilgenommen.</string>
    <string name="keineBewertung">Es liegen keine Bewertungen vor.</string>
    <string name="nachricht">Nachricht schreiben…</string>
    <string name="senden">Senden</string>
    <string name="unbekannt">Unbekannt</string>
    <string name="zus">Zusage</string>
    <string name="abs">Absage</string>
    <string name="zusage">Ich habe doch Zeit und möchte spontan teilnehmen! :)</string>
    <string name="absage">Mir ist etwas dazwischen gekommen und ich muss leider spontan absagen. :(</string>
    <string name="teilnehmer_eintrag">- %1$s</string>
    <string name="metadaten_trenner">%1$s • %2$s</string>
    <string name="kommentar_format">- %1$s</string>
</resources>