<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/app_name" />

    <TextView
        android:id="@+id/textDatum"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textGastgeber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkTeilnahme"
        android:text="@string/teilnahme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spielvorschläge" />

    <RadioGroup
        android:id="@+id/radioGroupSpiele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editSpielVorschlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vorschlag"
        android:imeOptions="actionDone"/>

</LinearLayout>