<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/app_name" />

        <TextView
            android:id="@+id/textDatum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textGastgeber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teilnehmer"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <ListView
            android:id="@+id/listTeilnehmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spiel"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textGewinnerSpiel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bewert"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>


        <!-- ========================= -->
        <!-- BEWERTUNG: GASTGEBER -->
        <!-- ========================= -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gbewert"
            android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutGastgeberBewertung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingGastgeber"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textGastgeberSchnitt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutGastgeberKommentare"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ebewert"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/layoutEssenBewertung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingEssen"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textEssenSchnitt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEssenKommentare"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abewert"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/layoutAllgemeinBewertung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingAllgemein"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textAllgemeinAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAllgemeinKommentare"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>